# FireStormGCS

./: CMakeLists.txt  LICENSE  README.md  qml.qrc
qml/: Main.qml  dark_icons.qrc  light_icons.qrc
qml/components/: BatteryStatus.qml  VehicleStatus.qml
source/: imageprovider.cpp  imageprovider.h  main.cpp
